force-app/main/default/objects/FEC_Other_Card__c/FEC_Other_Card__c.object-meta.xml
<CustomObject>
    <label>Other Card</label>
    <nameField>
        <displayFormat>OCN- {0}</displayFormat>
        <label>Other Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Card</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>