force-app/main/default/objects/FEC_Other_Card__c/fields/FEC_Card_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Activation_Date__c</fullName>
    <label>Card Activation Date</label>
    <type>Date</type>
</CustomField>