force-app/main/default/objects/FEC_Other_Card__c/fields/FEC_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Number__c</fullName>
    <label>Card Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>