force-app/main/default/objects/FEC_Other_Card__c/fields/FEC_Cardholder__c.field-meta.xml
<CustomField>
    <fullName>FEC_Cardholder__c</fullName>
    <label>Cardholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>