force-app/main/default/objects/FEC_Other_Card__c/fields/FEC_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>