force-app/main/default/objects/FEC_Other_Card__c/fields/FEC_Gender__c.field-meta.xml
<CustomField>
    <fullName>FEC_Gender__c</fullName>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>