force-app/main/default/objects/FEC_Other_Card__c/fields/FEC_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Issue_Date__c</fullName>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>