force-app/main/default/objects/FEC_Other_Card__c/fields/FEC_Plastic_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Plastic_ID__c</fullName>
    <label>Plastic ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>